🕐 Fix: Corrigir timezone e horários de agendamento
- Adicionar configuração de timezone America/Sao_Paulo no Dockerfile
- Sincronizar timezone nos containers (frontend e scheduler)
- Ajustar horários de mensagens: Manha 09:15 e Tarde 18:00
- Evitar duplicação de mensagens no mesmo horário
- Adicionar script de verificação de timezone
- Adicionar documentação das correções

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,7 @@ services:
       - ./.env:/app/.env
     environment:
       - PYTHONUNBUFFERED=1
+      - TZ=America/Sao_Paulo
     command: ["./scripts/iniciar.sh"]
     restart: always
     networks:
@@ -48,6 +49,7 @@ services:
       - ./.env:/app/.env
     environment:
       - PYTHONUNBUFFERED=1
+      - TZ=America/Sao_Paulo
     command: ["./scripts/scheduler.sh"]
     restart: always
     networks:
