--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,7 +23,7 @@ services:
       - PYTHONUNBUFFERED=1
       - TZ=America/Sao_Paulo
     command: ["./scripts/iniciar.sh"]
-    restart: always
+    restart: unless-stopped
     networks:
       - controle-ferias-network
     healthcheck:
@@ -32,7 +32,6 @@ services:
       timeout: 10s
       retries: 3
       start_period: 40s
-    # Restart: always garante que o container reinicie mesmo após reboot do host
 
   # ============================================
   # SCHEDULER - Agendamento Automático
@@ -51,19 +50,17 @@ services:
       - PYTHONUNBUFFERED=1
       - TZ=America/Sao_Paulo
     command: ["./scripts/scheduler.sh"]
-    restart: always
+    restart: unless-stopped
     networks:
       - controle-ferias-network
     depends_on:
-      frontend:
-        condition: service_started
+      - frontend
     healthcheck:
       test: ["CMD", "pgrep", "-f", "scheduler.jobs"]
       interval: 60s
       timeout: 10s
       retries: 3
       start_period: 30s
-    # Restart: always garante que o container reinicie mesmo após reboot do host
 
 networks:
   controle-ferias-network:
